# sweng-project-23-2023

./: .gitignore  CMakeLists.txt  Client.cpp  Dockerfile  Makefile  README.md  Server.cpp  client.cfg  open_coverage.bat  package-lock.json
.github/: CODEOWNERS
.github/workflows/: cmake.yml  cpp.yml  docker-image.yml
include/: README.md  client.hpp  httplib.h  json.hpp  server.hpp
include/quickfix/: Acceptor.h  Application.h  DataDictionary.h  DataDictionaryProvider.h  Dictionary.h  Exceptions.h  Field.h  FieldConvertors.h  FieldMap.h  FileStore.h  Group.h  HttpConnection.h  HttpMessage.h  HttpParser.h  HttpServer.h  Initiator.h  Message.h  MessageStore.h  MySQLConnection.h  MySQLStore.h  NullStore.h  OdbcConnection.h  OdbcStore.h  PUGIXML_DOMDocument.h  Parser.h  PostgreSQLConnection.h  PostgreSQLStore.h  SSLSocketAcceptor.h  SSLSocketConnection.h  SSLSocketInitiator.h  Session.h  SessionFactory.h  SessionSettings.h  SessionState.h  SocketAcceptor.h  SocketConnection.h  SocketInitiator.h  SocketServer.h  ThreadedSSLSocketAcceptor.h  ThreadedSSLSocketConnection.h  (+5 more)
libs/: README.md
src/: Application.cpp  Application.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  MatchingEngine.cpp  MatchingEngine.h  OrderStatus.cpp  OrderStatus.h  README.md  client.cfg  client.cpp  index.html  server.cfg  server.cpp
src/trade-exchange/: package-lock.json  package.json
src/trade-exchange/src/: App.css  App.js  index.css  index.js
src/trade-exchange/src/Components/: Data.js  Equities.js  Graph.js  NavBar.js  OrderPlotter.js  PieChart.js  StockRow.js  TradeCard.js  Username.js  stockChart.js
src/trade-exchange/src/css/: Button.css  Flex.css  Grid.css  Main.css  NavBar.css  Text.css
src/trade-exchange/src/pages/: Admin.jsx  Home.jsx  Trade.jsx
test/: README.md  test.hpp  test_example.cpp  test_extract_key.cpp  test_httpReq.cpp  test_implementations.cpp  test_isCorrectForm.cpp  test_isNum.cpp  test_userInput.cpp
trade-exchange/: package-lock.json  package.json
trade-exchange/public/: index.html
trade-exchange/src/: App.css  App.js  index.js
trade-exchange/src/Components/: Data.js  NavBar.js  PieChart.js  TradeCard.js
trade-exchange/src/css/: Main.css  NavBar.css  Text.css
trade-exchange/src/pages/: Admin.jsx  Graph.jsx  Home.jsx  Landing.jsx  Trade.jsx
